--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,8 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsIUMjCPmZCK_CrP-7mTXPBQRZMNeYaU4&libraries=places">
+    </script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
